lint + po cfg
